<resources>
    <string name="app_name">CRUD</string>
    <string name="hello">Masukkan nama dan hobi</string>
    <string name="btnAddtxt">Add</string>
    <string name="namaLabel">Nama</string>
    <string name="hobiLabel">hobi</string>
    <string name="nomorLabel">No.</string>
    <string name="btnGetRow">Get</string>
    <string name="btnUpdateRow">Update</string>
    <string name="ketUpdate">Sebelum mengubah data,
        pilih dulu  baris ke berapa
        data yang akan diubah</string>
    <string name="ketAmbilBaris">Update data pada baris ke</string>
    <string name="ketDelete">Tulis no. baris
        yang akan di delete,
        lalu klik tombol &quot;delete&quot;</string>
    <string name="btnDel">Delete</string>
</resources>
