<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CrudDatabaseFragment"
    android:id="@+id/Crud"
    android:clickable="false"
    android:background="#ffffffff">

    <TextView
        android:text="@string/hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1">
        <EditText
            android:id="@+id/inNama"
            android:layout_width="100dip"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/inHobi"
            android:layout_width="100dip"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnAdd"
            android:text="@string/btnAddtxt"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:id="@+id/view1"
        android:background="#FF909090"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/ketUpdate"
        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:id="@+id/view3"
        android:background="#FF909090"
        android:layout_marginTop="48dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linerLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:text="@string/ketAmbilBaris"
            />
        <EditText
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:id="@+id/idGetId"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGetRow"
            android:id="@+id/btnGetId"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/view2">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:id="@+id/inUpdateNama"
            />
        <EditText
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:id="@+id/inUpdateHobi"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnUpdateRow"
            android:id="@+id/btnUpdate"
            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:id="@+id/view4"
        android:layout_height="1dip"
        android:background="#FF909090"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/ketDelete"/>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="50dip"
            android:id="@+id/idDelete"/>
        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/button1"
            android:text="@string/btnDel"/>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:id="@+id/view2"
        android:layout_height="1dip"
        android:background="#FF909090"/>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tabel_data">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content"
                android:layout_width="50dip"
                android:text="@string/nomorLabel"
                android:id="@+id/no_id"/>
            <TextView android:layout_height="wrap_content"
                android:layout_width="100dip"
                android:text="@string/namaLabel"
                android:id="@+id/nama_id"/>
            <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/hobiLabel"
                android:id="@+id/hobi_id"/>
        </TableRow>
    </TableLayout>

    </RelativeLayout>
